SFDC Automation/src/objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Account</description>
        <inlineHelpText>Select the Related Account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Add Content</relationshipLabel>
        <relationshipName>Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Buyer_Role__c</fullName>
        <description>Field to indicate the role of the person this document is intended to</description>
        <label>Buyer Role</label>
        <picklist>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitive_Intelligence__c</fullName>
        <description>To flag content as being related to competitors. As most of these fields, it could be achieved with tags but it is easier for the user to see the values on the left pane and when loading documents, the correct values are easier to see, order and set</description>
        <label>Competitive Intelligence</label>
        <picklist>
            <picklistValues>
                <fullName>Penske</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idealease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHH Corporation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <description>To indicate what type of document is this</description>
        <inlineHelpText>Please indicate what this document is about</inlineHelpText>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>Case Study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brochure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Paper</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>In case of documents with content specific to an industry, this field indicates the industry it covers</description>
        <inlineHelpText>Please indicate the industry this document covers, if applicable</inlineHelpText>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity that requires this proposal. If it is an RFI, where strictly speaking an opportunity may not exist yet, we will create a 0 value opportunity for consistency in the handling of the document</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Content</relationshipLabel>
        <relationshipName>Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ownership_TCO__c</fullName>
        <description>To flag content that is intended to cover needs for the Ownership market. Although it could be done with tags, the field allows these values to be easily visible in the left pane</description>
        <label>Ownership/TCO</label>
        <picklist>
            <picklistValues>
                <fullName>Ownership Playbook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Guide &amp; Instructions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TCO Presentation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposal_Section__c</fullName>
        <description>To indicate what section of a proposal every document would belong to. Each document is supposed to be responses to questions in one specific area</description>
        <inlineHelpText>Please select the section of the proposal that this document covers</inlineHelpText>
        <label>Proposal Section</label>
        <picklist>
            <picklistValues>
                <fullName>Account Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing &amp; Invoicing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuel Service &amp; Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet Management Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation and Transition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Assurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Self_Service_Type__c</fullName>
        <description>Field to indicate what is the document about. This allows the filtering to show in the Content section with the values of this field</description>
        <inlineHelpText>Please indicate what is the general category of this document</inlineHelpText>
        <label>Self Service Type</label>
        <picklist>
            <picklistValues>
                <fullName>Capabilities Presentations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shop Locations and Maps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collaterals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sample Graphics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Org Charts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Bios</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Aids</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Helpful Tools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procurement Portal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <description>Field to indicate what solution is this document abou</description>
        <label>Solution</label>
        <picklist>
            <picklistValues>
                <fullName>TCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telematics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMS - Preventive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMS - Comprehensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMS - On Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMS - ODM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuel Service Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used Vehicle Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuel Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Gas / Alt Fuels</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <recordTypes>
        <fullName>Proposal</fullName>
        <active>true</active>
        <label>Proposal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Proposal_Documents</fullName>
        <active>true</active>
        <label>Proposal Documents</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Self_Service</fullName>
        <active>true</active>
        <label>Sales Self Service</label>
    </recordTypes>
</CustomObject>